# Mimik_Proofkit

./: .env.example  .gitignore  CLAUDE.md  MIMIK_PROOFKIT_FOUNDATION.md  PHASE5_IMPLEMENTATION_PLAN.md  README.md  mcp_config.json  pyproject.toml
agents/: AGENT_ANALYZER.md  AGENT_API.md  AGENT_BACKEND.md  AGENT_COLLECTOR.md  AGENT_FRONTEND.md  AGENT_NARRATOR.md  AGENT_VISUAL_QA.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api.ts  utils.ts
proofkit/: __init__.py  __main__.py
proofkit/agents/: __init__.py  experience_agent.py
proofkit/analyzer/: __init__.py  deduplication.py  engine.py  impact_scorer.py  scoring.py
proofkit/analyzer/rules/: __init__.py  base.py  business_logic.py  conversion.py  dom_quality.py  performance.py  security.py  seo.py  text_quality.py  ux.py  visual_qa.py
proofkit/api/: __init__.py  main.py
proofkit/cli/: __init__.py  __main__.py  main.py
proofkit/codebase_qa/: __init__.py  analyzer.py  test_generator.py  visual_report.py
proofkit/collector/: __init__.py  business_detector.py  http_probe.py  lighthouse.py  models.py  playwright_snapshot.py  stack_detector.py
proofkit/core/: __init__.py  pipeline.py  runner.py
proofkit/intelligent_qa/: __init__.py  feature_discovery.py  test_generator.py
proofkit/mcp/: __init__.py  server.py
proofkit/narrator/: __init__.py  ai_client.py  claude_client.py  concept_generator.py  narrative_builder.py  prompts.py  token_manager.py
proofkit/report_builder/: __init__.py  figma_export.py  pencil_export.py
proofkit/schemas/: __init__.py  audit.py  business.py  finding.py  report.py
proofkit/utils/: __init__.py  config.py  exceptions.py  logger.py  paths.py
tests/: __init__.py  conftest.py  test_config.py  test_deduplication.py  test_schemas.py
tests/analyzer/: conftest.py  test_engine.py  test_rules.py  test_scoring.py  test_visual_qa.py
tests/api/: conftest.py  test_audits.py  test_auth.py  test_health.py  test_reports.py
tests/collector/: __init__.py  conftest.py  test_business_detector.py  test_http_probe.py  test_models.py  test_stack_detector.py
tests/narrator/: __init__.py  conftest.py  test_concept_generator.py  test_narrative_builder.py  test_narrator.py  test_token_manager.py
tests/report_builder/: __init__.py  test_pencil_export.py
(+29 files in other folders)
